kubernetes/labs/modulo02-ContainerOrchestration/Ingress/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coffee-tea-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    # - host: "localhost"
    - http:
        paths:
          - path: /coffe
            pathType: Prefix
            backend:
              service:
                name: coffee-svc
                port:
                  number: 80
          - path: /tea
            pathType: Prefix
            backend:
              service:
                name: tea-svc
                port:
                  number: 80
